--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <div class="vis-2 pos-4 size-5 colwrapper">
 <div class="vis-2 pos-4 size-6 cont-8">
 <picture class="img-2">
-<source srcset="images/zhan-tie-tu-xiang-740.png 1x, images/zhan-tie-tu-xiang-1480.png 2x">
-<img src="images/zhan-tie-tu-xiang-740.png" alt="" class="js img">
+<source srcset="img/1.png 1x, images/zhan-tie-tu-xiang-1480.png 2x">
+<img src="img/1.png" alt="" class="js img">
 </picture>
 </div>
 <div class="vis-2 pos-10 size-7 cont-9">
